删除 php-fpm-8.2 develop

--- a/php/phpfpm8.2/Dockerfile
+++ b/php/phpfpm8.2/Dockerfile
@@ -54,15 +54,38 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
   && curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/mongodb" -o mongodb.tgz \
   && mkdir -p /tmp/mongodb \
   && tar -xf mongodb.tgz -C /tmp/mongodb --strip-components=1 \
-  && rm mongodb.tgz \
+  && rm -f mongodb.tgz \
   && docker-php-ext-configure /tmp/mongodb --enable-mongodb \
   && docker-php-ext-install -j${NPROC} /tmp/mongodb \
+  #先禁用，需要时再启用，
+  && sed -i 's/^/;/' /usr/local/etc/php/conf.d/docker-php-ext-mongodb.ini \
   && rm -rf /tmp/mongodb \
+    \
+# xdebug
+  && curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/xdebug" -o xdebug.tgz \
+  && mkdir -p /tmp/xdebug \
+  && tar -xf xdebug.tgz -C /tmp/xdebug --strip-components=1 \
+  && rm -f xdebug.tgz \
+  && docker-php-ext-configure /tmp/xdebug --enable-xdebug \
+  && docker-php-ext-install -j${NPROC} /tmp/xdebug \
+  #先禁用，需要时再启用，
+  && sed -i 's/^/;/' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && rm -rf /tmp/xdebug \
+  \
+# xdebug 配置
+  && echo "" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo "xdebug.mode=debug,develop,trace" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo "xdebug.remote_handler=dbgp" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo "xdebug.max_nesting_level=1000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo ";xdebug.remote_host = 10.10.10.1" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo ";xdebug.remote_host = 10.0.2.2" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo "xdebug.client_port = 9000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+  && echo "xdebug.idekey = \"PHPSTORM\"" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
 # 更改配置 \
   && apk add --no-cache --virtual .build-deps shadow \
 	&& usermod -u 82 www-data \
 	&& groupmod -g 82 www-data \
-  #socks 不便于水平扩展
+    \
   && cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini \
   && sed -i 's/^disable_functions =$/disable_functions = exec,shell_exec,system,curl_multi_exec,parse_ini_file,show_source/g' /usr/local/etc/php/php.ini \
   \
