--- a/php/phpfpm8.2/bullseye/Dockerfile
+++ b/php/phpfpm8.2/bullseye/Dockerfile
@@ -10,7 +10,7 @@ ENV PATH="${PATH}:${PHP_PHAR_DIR}"
 ENV TIMEZONE="Asia/Shanghai"
 
 #扩展安装脚本
-#COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
+COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 
 RUN ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 	&& echo "${TIMEZONE}" > /etc/timezone \
@@ -18,14 +18,14 @@ RUN ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
   && set -xe \
   && NPROC=$(getconf _NPROCESSORS_ONLN); \
 # phar composer
-#  mkdir ${PHP_PHAR_DIR}; \
+  mkdir ${PHP_PHAR_DIR}; \
 ## 政治化版 \
-#  COMPOSER_VER=`curl -s https://api.github.com/repos/composer/composer/releases/latest | grep "tag_name"  | head -n 1 | cut -d '"' -f4`; \
-#  COMPOSER_VER=${COMPOSER_VER:-${DEFAULT_COMPOSER_VER}}; \
-#  curl -fsSL https://github.com/composer/composer/releases/download/${COMPOSER_VER}/composer.phar  -o ${PHP_PHAR_DIR}/composer; \
+  COMPOSER_VER=`curl -s https://api.github.com/repos/composer/composer/releases/latest | grep "tag_name"  | head -n 1 | cut -d '"' -f4`; \
+  COMPOSER_VER=${COMPOSER_VER:-${DEFAULT_COMPOSER_VER}}; \
+  curl -fsSL https://github.com/composer/composer/releases/download/${COMPOSER_VER}/composer.phar  -o ${PHP_PHAR_DIR}/composer; \
 ## 非政治化版本 \
 ##  && curl -fsSL https://github.com/open-composer/composer/releases/download/2.2.9/composer.phar -o ${PHP_PHAR_DIR}/composer \
-#  chmod +x ${PHP_PHAR_DIR}/composer; \
+  chmod +x ${PHP_PHAR_DIR}/composer; \
 #    \
 #  apt-get update; \
 #  apt-get install -y --no-install-recommends \
@@ -33,21 +33,43 @@ RUN ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 # 安装扩展 \
 #  docker-php-ext-configure gd --with-freetype --with-jpeg; \
 #  docker-php-ext-install bcmath exif opcache pcntl zip gd gmp mysqli pdo_mysql gettext sockets; \
-  curl -sSLf \
-        -o /usr/local/bin/install-php-extensions \
-        https://ghproxy.com/https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions; \
-  chmod +x /usr/local/bin/install-php-extensions; \
-  install-php-extensions imagick @composer gd bcmath opcache pcntl zip gmp mysqli pdo_mysql gettext sockets redis yaml; \
-#     \
+  install-php-extensions bcmath exif opcache pcntl zip gd gmp pdo_mysql gettext \
+      sockets redis yaml; \
+       \
   rm -f /usr/local/bin/install-php-extensions; \
+  curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/mongodb" -o mongodb.tgz; \
+  mkdir -p /tmp/mongodb; \
+  tar -xf mongodb.tgz -C /tmp/mongodb --strip-components=1; \
+  rm -f mongodb.tgz; \
+  docker-php-ext-configure /tmp/mongodb --enable-mongodb; \
+  docker-php-ext-install -j${NPROC} /tmp/mongodb; \
+  #先禁用，需要时再启用，
+  sed -i 's/^/;/' /usr/local/etc/php/conf.d/docker-php-ext-mongodb.ini; \
+  rm -rf /tmp/mongodb; \
+    \
+# xdebug
+  curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/xdebug" -o xdebug.tgz; \
+  mkdir -p /tmp/xdebug; \
+  tar -xf xdebug.tgz -C /tmp/xdebug --strip-components=1; \
+  rm -f xdebug.tgz; \
+  docker-php-ext-configure /tmp/xdebug --enable-xdebug; \
+  docker-php-ext-install -j${NPROC} /tmp/xdebug; \
+  #先禁用，需要时再启用，
+  sed -i 's/^/;/' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  rm -rf /tmp/xdebug; \
+  \
+# xdebug 配置
+  echo "" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo "xdebug.mode=debug,develop,trace" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo "xdebug.remote_handler=dbgp" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo "xdebug.max_nesting_level=1000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo ";xdebug.remote_host = 10.10.10.1" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo ";xdebug.remote_host = 10.0.2.2" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo "xdebug.client_port = 9000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  echo "xdebug.idekey = \"PHPSTORM\"" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
 ## 更改配置
 	usermod -u 82 www-data; \
 	groupmod -g 82 www-data; \
-#  #socks 不便于水平扩展
-#  && mkdir /socks \
-#  && chown www-data:www-data /socks \
-#  && sed -i 's/^listen = 9000$/listen = \/socks\/php-fpm\.sock/g' /usr/local/etc/php-fpm.d/zz-docker.conf \
-#  && sed -i '$a listen\.mode = 0660' /usr/local/etc/php-fpm.d/zz-docker.conf \
   cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini; \
   sed -i 's/^disable_functions =$/disable_functions = exec,shell_exec,system,curl_multi_exec,parse_ini_file,show_source/g' /usr/local/etc/php/php.ini; \
   \
