--- a/php/phpfpm8.2/supervisor/Dockerfile
+++ b/php/phpfpm8.2/supervisor/Dockerfile
@@ -1,4 +1,4 @@
-FROM mumianzi/php:8.2-fpm-alpine
+FROM --platform=${TARGETPLATFORM} mumianzi/php:8.2-fpm-alpine
 MAINTAINER stanzhou "m@sq.mk"
 
 #mac上此处设置貌似无效，可以设置 deamon.json 里的 dns 项
