--- a/php/phpfpm8.3/supervisor/Dockerfile
+++ b/php/phpfpm8.3/supervisor/Dockerfile
@@ -1,5 +1,6 @@
-FROM --platform=${TARGETPLATFORM} mumianzi/php:8.3-fpm-alpine
-MAINTAINER stanzhou "m@sq.mk"
+FROM mumianzi/php:8.3-fpm-alpine
+#LABEL "stanzhou" "m@sq.mk"
+#MAINTAINER stanzhou "m@sq.mk"
 
 #mac上此处设置貌似无效，可以设置 deamon.json 里的 dns 项
 #ARG PROXY_DNS=10.1.0.251
